# colour_app

./: .gitignore  README.md  build.py  config.json  pyproject.toml
colour_app/: app.py  boot.py  build.sh  config.json  sensor.py
colour_app/as7341/: as7341.py
colour_app/libs/as7341/: as7341.py
colour_app/libs/microdot/: __init__.py  helpers.py  test_client.py  utemplate.py  websocket.py
colour_app/static/: arco_iris.html  calibration.js  chart.html  manifest.json  matrix.js  pwa.css  pwa.js  pwa_sw.js  styles.css  svg.css  teste.html  ws.html
colour_app/templates/: base.html  config.html  dashboard.html  index.html  index_html.py  pwa.html
colour_app/tools/: typing.py
tests/: conftest.py  test_app.py  test_as7341.py  test_boot.py  test_config.py  test_sensor.py  test_typing.py
tools/: build.py  webrepl.py
