[project]
name = "colour-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucio Dias",email = "luciodiass@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    #"microdot (>=2.6.0,<3.0.0)"
]

[tool.poetry]
packages = [
    { include = "colour_app"},
    { include = "libs", from = "colour_app" },
    { include = "utemplate", from = "colour_app/libs" },
#    { include = "tools", from = "colour_app" },
#    { include = "as7341", from = "colour_app" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.15.11,<0.16.0)",
    "rich (>=15.0.0,<16.0.0)",
]
esp = [
    "esptool (>=5.2.0,<6.0.0)",
    "mpremote (>=1.28.0,<2.0.0)",
    "mpy-cross (>=1.27.0.post2,<2.0.0)"
]

# PYTEST
[tool.pytest.ini_options]
asyncio_mode = "auto"

# COVERAGE
[tool.coverage.run]
# source = [
#     "colour_app/*"
# ]
omit = [
    "tests/*",
    "colour_app/libs/*",
    "tools/*"
    ]

# TASKIPY
[tool.taskipy.tasks]
# pre_lint = 'typos'
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
#run = 'fastapi dev fast_zero/app.py'
#pre_test = 'task lint'
#test = 'pytest -s -x --cov=fast_zero -vv'
#post_test = 'coverage html'
build = 'poetry run python tools/build.py'

